2007-07-30  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/Synchronization/TomboySyncClient.cs: Removing extraneous debug
	  statement.
	* po/POTFILES.in: Adding sync code to POTFILES.in, commenting out tasks
	  addin code.

2007-07-30  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy.mdp, Tomboy/PreferencesDialog.cs, Tomboy/SyncDialog.cs,
	  Tomboy/SyncUtils.cs, Tomboy/SyncServiceAddin.cs,
	  Tomboy/SyncManager.cs, Tomboy/FileSystemSyncServer.cs,
	  Tomboy/Tomboy.cs, Tomboy/AddinManager.cs,
	  Tomboy/Synchronization/SyncDialog.cs,
	  Tomboy/Synchronization/SyncUtils.cs,
	  Tomboy/Synchronization/SyncServiceAddin.cs,
	  Tomboy/Synchronization/FuseSyncServiceAddin.cs,
	  Tomboy/Synchronization/TomboySyncClient.cs,
	  Tomboy/Synchronization/SyncManager.cs,
	  Tomboy/Synchronization/FileSystemSyncServer.cs, Tomboy/Makefile.am,
	  Tomboy/TomboySyncClient.cs: Moving sync source files into
	  Tomboy/Synchronization, namespace Tomboy.Sync.

2007-07-30  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncDialog.cs, Tomboy/SyncManager.cs: Apparently better
	  conflict handling.  No need to delete if sync can overwrite, no
	  need to rename old note if it's being deleted anyway, etc.  Need to
	  clean up still, decide whether or not to support updating
	  referencing notes on that sort of rename.

2007-07-30  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/TomboySyncClient.cs: "Fixed" manifest parsing code.

2007-07-29  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/Addins/WebDavSyncService/WebDavSyncServiceAddin.cs: Don't
	  throw if get/set configuration into keyring fails (still need to
	  prompt user, etc).

2007-07-29  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy.mdp: Adding Mono.Addins just like trunk.
	* Tomboy/SyncDialog.cs: Simplifying conflict UI.

2007-07-29  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncDialog.cs, Tomboy/SyncManager.cs: Smarter conflict/content