@@ -34,12 +34,6 @@ Tomboy/Addins/SshSyncService/SshSyncServiceAddin.cs
 Tomboy/Addins/SshSyncService/SshSyncService.addin.xml
 Tomboy/Addins/StickyNoteImport/StickyNoteImportNoteAddin.cs
 Tomboy/Addins/StickyNoteImport/StickyNoteImport.addin.xml
-#Tomboy/Addins/Tasks/TaskListWindow.cs
-#Tomboy/Addins/Tasks/TaskManager.cs
-#Tomboy/Addins/Tasks/TaskOptionsDialog.cs
-#Tomboy/Addins/Tasks/TasksApplicationAddin.cs
-#Tomboy/Addins/Tasks/TasksNoteAddin.cs
-#Tomboy/Addins/Tasks/Tasks.addin.xml
 Tomboy/Addins/WebDavSyncService/WebDavSyncServiceAddin.cs
 Tomboy/Addins/WebDavSyncService/WebDavSyncService.addin.xml
 Tomboy/Applet.cs
