@@ -16,3 +16,10 @@ Mono.Addins/Mono.Addins.Gui/gtk-gui/Mono.Addins.Gui.ManageSitesDialog.cs
 Mono.Addins/Mono.Addins.Gui/gtk-gui/Mono.Addins.Gui.NewSiteDialog.cs
 Mono.Addins/Mono.Addins/Mono.Addins.Description/AssemblyDependency.cs
 Mono.Addins/Mono.Addins/Mono.Addins/AddinSessionService.cs
+Tomboy/Addins/Tasks/TaskListWindow.cs
+Tomboy/Addins/Tasks/TaskManager.cs
+Tomboy/Addins/Tasks/TaskOptionsDialog.cs
+Tomboy/Addins/Tasks/TasksApplicationAddin.cs
+Tomboy/Addins/Tasks/TasksNoteAddin.cs
+Tomboy/Addins/Tasks/Tasks.addin.xml
+
