@@ -1,5 +1,10 @@
 2007-07-30  Sandy Armstrong <sanfordarmstrong@gmail.com> 
 
+	* po/POTFILES.skip, po/POTFILES.in: Moving tasks addin files to
+	  POTFILES.skip.
+
+2007-07-30  Sandy Armstrong <sanfordarmstrong@gmail.com> 
+
 	* Tomboy/Synchronization/TomboySyncClient.cs: Removing extraneous debug
 	  statement.
 	* po/POTFILES.in: Adding sync code to POTFILES.in, commenting out tasks
